changed file structure fixed script paths

--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -18,14 +18,14 @@
     <!-- state: Manage application state and bind it to parts of the application to automatically react to state changes. -->
     <script src="https://unpkg.com/aframe-state-component@6.6.0/dist/aframe-state-component.min.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@5/dist/aframe-event-set-component.min.js"></script>
-    <script src="video-controls.js"></script>
+    <script src="./scripts/video-controls.js"></script>
     
     <!-- State definition. -->
-    <script src="state.js"></script>
+    <script src="./scripts/state.js"></script>
     
     <!-- Application components. -->
     
-    <script src="environment-changer.js"></script>
+    <script src="./scripts/environment-changer.js"></script>
     <script>AFRAME.registerComponent('raycastable', {});</script>
     
     <!--<script>
