--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -155,7 +155,7 @@
         <video id="ramallah_vid2" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2F00125_Trim.mp4?v=1561135763147"></video>
         <video id="jerusalem_gate_vid" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Forigin_1.mp4?v=1561138342770"></video>
         <video id="jerusalem_roof_vid" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Forigin_0%20(1).mp4?v=1561138975151"></video>
-        <video  id="kafr-qaddam_vid" preload="auto" loop="true" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2F3d(2).mp4?v=1559745270352"></video>
+        <video  id="kafr-qaddam_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2F3d(2).mp4?v=1559745270352"></video>
       </a-assets>
 
       
