--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -29,7 +29,7 @@
       <a-assets>
         <!-- Images -->
         <img id="mapIsrael" src="assets/misc/israelMap.png">
-        <img id="pin_src" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2FLocation-5-1.png?v=1561572418750">
+        <img id="pin_src" src="assets/misc/map-pin.png">
         <img id="jerusalem-menu" src="assets/jerusalem/jerusalem-thumb.png">
         <img id="bethlehem-menu" src="assets/bethlehem-thumb.png">
         <img id="ramallah-menu" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2FRamallah.png?1559591870567">
@@ -38,7 +38,7 @@
         <img id="hebron-menu" src="assets/hebron/hebron-thumb.png">
         <img id="qalqilya-menu" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Fqalqiliya.png?1559591868847">
         <img id="qalandia-menu" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Fqalandia.png?1559591870612">
-        <img id="kafr-qaddam-menu" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Fkfar%20Qaddum.png?1559591869053">
+        <img id="kafr-qaddam-menu" src="assets/kafr-qaddam/kafr-qaddam-thumb.png">
         <img id="tel-aviv-menu" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Ftelaviv.png?1559591870508">
         <img id="birzeit-menu" src="assets/birzeit/birzeit-thumb.png">
         <!-- Assets .obj and .mtl used to materialize the Quito mountain model-->
