--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -36,7 +36,7 @@
         <img id="jericho-menu" src="assets/jericho/Jericho-thumb.png">
         <img id="dsm-menu" src="assets/deadsea/dsm-thumb.png">
         <img id="hebron-menu" src="assets/hebron/hebron-thumb.png">
-        <img id="qalqilya-menu" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Fqalqiliya.png?1559591868847">
+        <img id="qalqilya-menu" src="assets/qalqilya/qalqilya-thumb.png">
         <img id="qalandia-menu" src="assets/qalandia/qalandia-thumb.png">
         <img id="kafr-qaddam-menu" src="assets/kafr-qaddam/kafr-qaddam-thumb.png">
         <img id="tel-aviv-menu" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Ftelaviv.png?1559591870508">
@@ -95,7 +95,7 @@
         <a-mixin id="videoPlayer" geometry="primitive: plane; height: 2; width: 3" material="shader: flat" rotation="180 0 0"></a-mixin>
         
         <video id="qalandia_checkpoint_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Forigin_0.mp4?v=1561130812264"></video>
-        <video id="qalandia_traffic_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Forigin_4.mp4?v=1561129366071"></video>
+        <video id="qalandia_traffic_vid" preload="auto" src="assets/qalandia/qala-traffic-video.mp4"></video>
         <video id="jericho_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2FVID_20190120_170302.mp4?v=1561392208546"></video>
         <video id="bethlehem_vid1" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2FDj-bland.mp4?v=1561061953843"></video>
         <video id="ramallah_interview1" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2F00040.mp4?v=1561134542402"></video>
