--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -51,7 +51,7 @@
 -->
         <!-- Background environment-->
         <!-- Quito -->
-        <img id="quito" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Fquito.jpg?1559232061272">
+        <img id="quito" src="assets/quito/quito360.jpg">
         
         <!-- Hebron -->
         <audio id="hebron-audio" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Fhebron_audio.mp3?v=1560879828934"></audio>
