--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -42,8 +42,8 @@
         <img id="tel-aviv-menu" src="assets/telaviv/telaviv-thumb.png">
         <img id="birzeit-menu" src="assets/birzeit/birzeit-thumb.png">
         <!-- Assets .obj and .mtl used to materialize the Quito mountain model-->
-        <a-asset-item id="mount-obj" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Flowpolymountains-1.obj?1559326651212"></a-asset-item>
-        <a-asset-item id="mount-mtl" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Flowpolymountains-1.mtl?1559326651149"></a-asset-item> 
+        <a-asset-item id="mount-obj" src="assets/quito/quito-model-obj.obj"></a-asset-item>
+        <a-asset-item id="mount-mtl" src="assets/quito/quito-model-mtl.mtl"></a-asset-item> 
       
         <!-- Asset image template 
         <img id="" src="">
